[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-ws-proxy-android"
version = "1.1.3.post1"
description = "Telegram WebSocket Bridge Proxy adapted for Android/Termux"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Flowseal" }
]
keywords = [
    "telegram",
    "proxy",
    "websocket",
    "android",
    "termux"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]
dependencies = [
    "cryptography==46.0.5",
]

[project.optional-dependencies]
android = []

[project.scripts]
tg-ws-proxy = "proxy.tg_ws_proxy:main"
tg-ws-proxy-android = "android:main"

[project.urls]
Source = "https://github.com/Flowseal/tg-ws-proxy"
Upstream = "https://github.com/Flowseal/tg-ws-proxy"
Issues = "https://github.com/Flowseal/tg-ws-proxy/issues"

[tool.setuptools]
packages = ["proxy"]
py-modules = ["android"]
include-package-data = true
